comecei a escrever conteudo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, ducimus maiores minima architecto assumenda cum, nesciunt doloribus illum neque magni nisi recusandae, voluptate nihil ea dolore aperiam saepe non porro?
+            </p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam nobis consectetur velit nihil! Numquam necessitatibus fugit vitae quis a quae eveniet similique deserunt repellat est? Magni dolores eveniet aliquam sit!</p>
         </article>
 
     </main>
